fix extra space in .quadrant-grid

--- a/stickmap/stickmap.css
+++ b/stickmap/stickmap.css
@@ -60,6 +60,7 @@ input:focus {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 1px;
+    height: fit-content;
 }
 
 .quadrant::before {
